# simple-rust-decompiler

./: Cargo.toml  README.md
docs/: 01-overview.md  技术文档.md
src/: main.rs
src/analysis/: mod.rs
src/binary/: mod.rs
src/codegen/: mod.rs
src/disasm/: mod.rs
src/ir/: lift.rs  mod.rs
test/: a.out
